--- a/server/Makefile
+++ b/server/Makefile
@@ -1,10 +1,11 @@
 CC=g++
 
 EXTRAFLAGS=-lpqxx -lpq -lpthread
-GOOGLE_BUFFER= -pkg-config --cflags --libs protobuf
+GOOGLE_BUFFER= `pkg-config --cflags --libs protobuf`
+PROTO= protobuf/amazon_ups.pb.cc protobuf/world_amazon.pb.cc 
 
 server: server.cpp
-	$(CC) -std=c++11 -g -o $@ server.cpp $(GOOGLE_BUFFER) $(EXTRAFLAGS)
+	$(CC) -std=c++11 -g -o $@ server.cpp $(PROTO) $(GOOGLE_BUFFER) $(EXTRAFLAGS)
 
 
 .PHONY:
