--- a/server/Makefile
+++ b/server/Makefile
@@ -3,9 +3,11 @@ CC=g++
 EXTRAFLAGS=-lpqxx -lpq -lpthread
 GOOGLE_BUFFER= `pkg-config --cflags --libs protobuf`
 PROTO= protobuf/amazon_ups.pb.cc protobuf/world_amazon.pb.cc 
+CXXFLAGS = -std=c++11 -O2 -g -mcmodel=large
+SERVER= common.cpp server.cpp
 
-server: server.cpp
-	$(CC) -std=c++11 -g -o $@ server.cpp $(PROTO) $(GOOGLE_BUFFER) $(EXTRAFLAGS)
+server: server.cpp common.cpp
+	$(CC) $(CXXFLAGS) -o $@ $(SERVER) $(PROTO) $(GOOGLE_BUFFER) $(EXTRAFLAGS)
 
 
 .PHONY:
