--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - "8873:8873"
     depends_on:
       - db
-      - frontend
+      # - frontend
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
